--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,15 @@
   --primary-dark-4: #005200;
   --primary-dark-5: #002e00;
   --primary-dark-6: #001a00;
-  --btn-bg-color: var(--primary);
-  --btn-bg-color-hover: color-mix(in srgb, var(--primary), black 10%);
-  /* --btn-border-color: color-mix(in srgb, var(--primary) 50%, white); */
+  --secondary: purple;
+  --btn-custom: blue;
+  --bg-custom: yellow;
+  --text-custom:black;
+  --btn-wrapper-bg: red;
+  --btn-primary-hover: color-mix(in srgb, var(--primary), black 30%);
+  --btn-secondary-hover: color-mix(in srgb, var(--secondary), black 30%);
+  --btn-custom-hover: color-mix(in srgb, var(--btn-custom), black 30%);
+  --btn-border-color: color-mix(in srgb, var(--btn-wrapper-bg) 50%, white);
 }
 
 body {
@@ -54,7 +60,7 @@ input#colorInput {
   margin-bottom: 2rem;
 }
 
-#presetsCards{
+#presetsCards {
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
@@ -137,31 +143,109 @@ input#colorInput {
   color: #111827;
 }
 
-.btns-bg-div {
-  --btns-bg-color: var(--primary);
-  background-color: var(--btns-bg-color);
-  --btn-border-color: color-mix(in srgb, var(--btns-bg-color) 50%, white);
-  padding: 40px;
-  margin: 40px 0;
-  text-align: center;
-}
-
-.btn-prime-div {
-  padding: 20px;
-  background-color: white;
-  border-color: transparent;
-  border-radius: 100px;
-}
-
-.btn-second-div {
-  background-color: transparent;
-  padding: 20px;
-  border: 3px solid;
-  border-radius: 100px;
-  border-color: var(--btn-border-color);
-  color: white;
-}
 #presetsSection h2 {
   margin-top: 3rem;
   color: #1f2937;
 }
+
+.bg-primary {
+  background-color: var(--primary);
+}
+.bg-secondary {
+  background-color: var(--secondary);
+}
+.bg-custom {
+  background-color: var(--bg-custom);
+}
+
+.text-primary{
+  color: var(--primary);
+}
+.text-secondary{
+  color: var(--secondary);
+}
+.text-custom{
+  color: var(--text-custom);
+}
+
+.btn-wrapper {
+  background-color: var(--btn-wrapper-bg);
+  padding: 50px;
+}
+
+.btn-primary {
+  background-color: var(--primary);
+  padding: 20px;
+  border: 2px solid transparent;
+}
+.btn-primary:hover {
+  background-color: var(--btn-primary-hover);
+}
+.btn-secondary {
+  background-color: var(--secondary);
+  padding: 20px;
+  border: 2px solid transparent;
+}
+.btn-secondary:hover {
+  background-color: var(--btn-secondary-hover);
+}
+.btn-outline {
+  background-color: transparent;
+  border: 2px solid;
+  border-color: var(--btn-border-color);
+  padding: 20px;
+}
+.btn-outline:hover {
+  background-color: var(--btn-border-color);
+  border-color: transparent;
+}
+.btn-custom {
+  background-color: var(--btn-custom);
+  padding: 20px;
+  border: 2px solid transparent;
+}
+.btn-custom:hover {
+  background-color: var(--btn-custom-hover);
+}
+
+/* .btn-yellow {
+  -moz-box-shadow: inset 0 1px 0 #fff0b3, 0 0 10px rgba(0, 0, 0, .2);
+  -webkit-box-shadow: inset 0 1px 0 #fff0b3, 0 0 10px rgba(0, 0, 0, .2);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  -webkit-transform: scale(1);
+  background: #fc0;
+  background: -moz-linear-gradient(top, rgba(255, 204, 0, 1) 0%, rgba(249, 184, 0, 1) 100%);
+  background: -webkit-linear-gradient(top, rgba(255, 204, 0, 1) 0%, rgba(249, 184, 0, 1) 100%);
+  background: linear-gradient(to bottom, rgba(255, 204, 0, 1) 0%, rgba(249, 184, 0, 1) 100%);
+  border: 1px solid #ffc400;
+  border: .1rem solid #ffc400;
+  box-shadow: inset 0 1px 0 #fff0b3, 0 0 10px rgba(0, 0, 0, .2);
+  color: #1d1d1d;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffcc00', endColorstr='#f9b800', GradientType=0);
+  transform: scale(1);
+  font-weight: bold;
+  border-radius: 5px;
+  width: 100%;
+  margin-top: 10px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+}
+
+.btn-yellow:hover {
+  background: #ffe065;
+  background: -moz-linear-gradient(top, rgba(255, 224, 101, 1) 0%, rgba(255, 204, 5, 1) 100%);
+  background: -webkit-linear-gradient(top, rgba(255, 224, 101, 1) 0%, rgba(255, 204, 5, 1) 100%);
+  background: linear-gradient(to bottom, rgba(255, 224, 101, 1) 0%, rgba(255, 204, 5, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe065', endColorstr='#ffcc05', GradientType=0);
+}
+
+.btn-yellow:active,
+.btn-yellow:focus {
+  -moz-transform: scale(.95);
+  -ms-transform: scale(.95);
+  -o-transform: scale(.95);
+  -webkit-transform: scale(.95);
+  box-shadow: inset 0 0 10px rgba(178, 143, 4, .35);
+  transform: scale(.95);
+} */
