--- a/css/main.css
+++ b/css/main.css
@@ -12,15 +12,18 @@
   --primary-dark-4: #005200;
   --primary-dark-5: #002e00;
   --primary-dark-6: #001a00;
+
   --secondary: purple;
-  --btn-custom: blue;
+
+  --btn-custom-bg: blue;
   --bg-custom: yellow;
-  --text-custom:black;
-  --btn-wrapper-bg: red;
+  --text-custom: black;
+
+  --btn-wrapper-bg: pink;
+  --btn-border-color: color-mix(in srgb, var(--btn-wrapper-bg) 50%, white);
   --btn-primary-hover: color-mix(in srgb, var(--primary), black 30%);
   --btn-secondary-hover: color-mix(in srgb, var(--secondary), black 30%);
-  --btn-custom-hover: color-mix(in srgb, var(--btn-custom), black 30%);
-  --btn-border-color: color-mix(in srgb, var(--btn-wrapper-bg) 50%, white);
+  --btn-custom-hover: color-mix(in srgb, var(--btn-custom-bg), black 30%);
 }
 
 body {
@@ -158,13 +161,13 @@ input#colorInput {
   background-color: var(--bg-custom);
 }
 
-.text-primary{
+.text-primary {
   color: var(--primary);
 }
-.text-secondary{
+.text-secondary {
   color: var(--secondary);
 }
-.text-custom{
+.text-custom {
   color: var(--text-custom);
 }
 
@@ -177,6 +180,7 @@ input#colorInput {
   background-color: var(--primary);
   padding: 20px;
   border: 2px solid transparent;
+  color: white;
 }
 .btn-primary:hover {
   background-color: var(--btn-primary-hover);
@@ -185,6 +189,7 @@ input#colorInput {
   background-color: var(--secondary);
   padding: 20px;
   border: 2px solid transparent;
+  color: white;
 }
 .btn-secondary:hover {
   background-color: var(--btn-secondary-hover);
@@ -194,34 +199,69 @@ input#colorInput {
   border: 2px solid;
   border-color: var(--btn-border-color);
   padding: 20px;
+  color: white;
 }
 .btn-outline:hover {
   background-color: var(--btn-border-color);
   border-color: transparent;
+  color: var(--btn-wrapper-bg);
 }
 .btn-custom {
-  background-color: var(--btn-custom);
+  background-color: var(--btn-custom-bg);
   padding: 20px;
   border: 2px solid transparent;
+  color: white;
 }
 .btn-custom:hover {
   background-color: var(--btn-custom-hover);
 }
 
-/* .btn-yellow {
-  -moz-box-shadow: inset 0 1px 0 #fff0b3, 0 0 10px rgba(0, 0, 0, .2);
-  -webkit-box-shadow: inset 0 1px 0 #fff0b3, 0 0 10px rgba(0, 0, 0, .2);
+.btn-yellow {
+  -moz-transition: 0.1s transform ease-in, 0.2s background ease-in;
+  -o-transition: 0.1s transform ease-in, 0.2s background ease-in;
+  -webkit-transition: 0.1s -webkit-transform ease-in, 0.2s background ease-in;
+  border: none;
+  display: inline-block;
+  font-family: "NewTransport-Bold", Arial, Helvetica, Verdana, sans-serif;
+  font-weight: 400;
+  cursor: pointer;
+  font-size: 22px;
+  font-size: 18px;
+  text-transform: capitalize;
+  letter-spacing: 0.003em;
+  line-height: 20px;
+  line-height: 2rem;
+  outline: none;
+  padding: 19px 27px;
+  padding: 1.4rem 2.7rem;
+  position: relative;
+  text-decoration: none;
+  transition: 0.1s transform ease-in, 0.2s background ease-in;
+  -moz-box-shadow: inset 0 1px 0 #fff0b3, 0 0 10px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: inset 0 1px 0 #fff0b3, 0 0 10px rgba(0, 0, 0, 0.2);
   -moz-transform: scale(1);
   -ms-transform: scale(1);
   -o-transform: scale(1);
   -webkit-transform: scale(1);
   background: #fc0;
-  background: -moz-linear-gradient(top, rgba(255, 204, 0, 1) 0%, rgba(249, 184, 0, 1) 100%);
-  background: -webkit-linear-gradient(top, rgba(255, 204, 0, 1) 0%, rgba(249, 184, 0, 1) 100%);
-  background: linear-gradient(to bottom, rgba(255, 204, 0, 1) 0%, rgba(249, 184, 0, 1) 100%);
+  background: -moz-linear-gradient(
+    top,
+    rgba(255, 204, 0, 1) 0%,
+    rgba(249, 184, 0, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgba(255, 204, 0, 1) 0%,
+    rgba(249, 184, 0, 1) 100%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 204, 0, 1) 0%,
+    rgba(249, 184, 0, 1) 100%
+  );
   border: 1px solid #ffc400;
-  border: .1rem solid #ffc400;
-  box-shadow: inset 0 1px 0 #fff0b3, 0 0 10px rgba(0, 0, 0, .2);
+  border: 0.1rem solid #ffc400;
+  box-shadow: inset 0 1px 0 #fff0b3, 0 0 10px rgba(0, 0, 0, 0.2);
   color: #1d1d1d;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffcc00', endColorstr='#f9b800', GradientType=0);
   transform: scale(1);
@@ -234,18 +274,64 @@ input#colorInput {
 
 .btn-yellow:hover {
   background: #ffe065;
-  background: -moz-linear-gradient(top, rgba(255, 224, 101, 1) 0%, rgba(255, 204, 5, 1) 100%);
-  background: -webkit-linear-gradient(top, rgba(255, 224, 101, 1) 0%, rgba(255, 204, 5, 1) 100%);
-  background: linear-gradient(to bottom, rgba(255, 224, 101, 1) 0%, rgba(255, 204, 5, 1) 100%);
+  background: -moz-linear-gradient(
+    top,
+    rgba(255, 224, 101, 1) 0%,
+    rgba(255, 204, 5, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgba(255, 224, 101, 1) 0%,
+    rgba(255, 204, 5, 1) 100%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 224, 101, 1) 0%,
+    rgba(255, 204, 5, 1) 100%
+  );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe065', endColorstr='#ffcc05', GradientType=0);
 }
 
 .btn-yellow:active,
 .btn-yellow:focus {
-  -moz-transform: scale(.95);
-  -ms-transform: scale(.95);
-  -o-transform: scale(.95);
-  -webkit-transform: scale(.95);
-  box-shadow: inset 0 0 10px rgba(178, 143, 4, .35);
-  transform: scale(.95);
-} */
+  -moz-transform: scale(0.95);
+  -ms-transform: scale(0.95);
+  -o-transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+  box-shadow: inset 0 0 10px rgba(178, 143, 4, 0.35);
+  transform: scale(0.95);
+}
+
+.btn-linear-gradient {
+  display: inline-block;
+  padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
+  font-family: var(--bs-btn-font-family);
+  font-size: var(--bs-btn-font-size);
+  font-weight: var(--bs-btn-font-weight);
+  line-height: var(--bs-btn-line-height);
+  color: var(--bs-btn-color);
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
+  border-radius: var(--bs-btn-border-radius);
+  background-color: var(--bs-btn-bg);
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  background-image: linear-gradient(120deg, var(--primary), var(--secondary));
+  color: #fff;
+  border-radius: 30px;
+  padding: 8px 24px;
+}
+.btn-linear-gradient:hover {
+  background-image: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 1),
+    rgba(255, 255, 255, 1)
+  );
+  color: var(--secondary);
+}
