--- a/css/main.css
+++ b/css/main.css
@@ -217,32 +217,13 @@ input#colorInput {
 }
 
 .btn-yellow {
-  -moz-transition: 0.1s transform ease-in, 0.2s background ease-in;
-  -o-transition: 0.1s transform ease-in, 0.2s background ease-in;
-  -webkit-transition: 0.1s -webkit-transform ease-in, 0.2s background ease-in;
-  border: none;
-  display: inline-block;
-  font-family: "NewTransport-Bold", Arial, Helvetica, Verdana, sans-serif;
-  font-weight: 400;
-  cursor: pointer;
-  font-size: 22px;
   font-size: 18px;
-  text-transform: capitalize;
   letter-spacing: 0.003em;
-  line-height: 20px;
   line-height: 2rem;
-  outline: none;
-  padding: 19px 27px;
   padding: 1.4rem 2.7rem;
   position: relative;
   text-decoration: none;
   transition: 0.1s transform ease-in, 0.2s background ease-in;
-  -moz-box-shadow: inset 0 1px 0 #fff0b3, 0 0 10px rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: inset 0 1px 0 #fff0b3, 0 0 10px rgba(0, 0, 0, 0.2);
-  -moz-transform: scale(1);
-  -ms-transform: scale(1);
-  -o-transform: scale(1);
-  -webkit-transform: scale(1);
   background: #fc0;
   background: -moz-linear-gradient(
     top,
@@ -259,7 +240,6 @@ input#colorInput {
     rgba(255, 204, 0, 1) 0%,
     rgba(249, 184, 0, 1) 100%
   );
-  border: 1px solid #ffc400;
   border: 0.1rem solid #ffc400;
   box-shadow: inset 0 1px 0 #fff0b3, 0 0 10px rgba(0, 0, 0, 0.2);
   color: #1d1d1d;
@@ -303,23 +283,7 @@ input#colorInput {
 }
 
 .btn-linear-gradient {
-  display: inline-block;
-  padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
-  font-family: var(--bs-btn-font-family);
-  font-size: var(--bs-btn-font-size);
-  font-weight: var(--bs-btn-font-weight);
-  line-height: var(--bs-btn-line-height);
-  color: var(--bs-btn-color);
-  text-align: center;
-  text-decoration: none;
-  vertical-align: middle;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-  border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
-  border-radius: var(--bs-btn-border-radius);
-  background-color: var(--bs-btn-bg);
+  border: solid 1px transparent;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   background-image: linear-gradient(120deg, var(--primary), var(--secondary));
@@ -334,4 +298,28 @@ input#colorInput {
     rgba(255, 255, 255, 1)
   );
   color: var(--secondary);
+}
+.radius-none {
+  border-radius: 0rem;
+}
+.radius-sm {
+  border-radius: 0.25rem;
+}
+.radius-md {
+  border-radius: 0.375rem;
+}
+.radius-lg {
+  border-radius: 0.5rem;
+}
+.radius-xl {
+  border-radius: 0.75rem;
+}
+.radius-2xl {
+  border-radius: 1rem;
+}
+.radius-pill {
+  border-radius: 50rem;
+}
+.radius-circle {
+  border-radius: 50%;
 }
